# ITMO

./: .gitignore  README.md  package-lock.json
2COURSE/2SEM/Csa/lab3/: pyproject.toml  pytest.ini
2COURSE/2SEM/Csa/lab3/code/: cat.json  greet.json  isa.py  machine.py  slim_shady.json  translator.py
2COURSE/2SEM/Csa/lab3/code/machine_code/: cycle.json  greet.json
2COURSE/2SEM/Csa/lab3/extra_progs/: double_hello.forth
2COURSE/2SEM/Csa/lab3/extra_progs/basic_progs/: add.forth  basic_cycle.forth  basic_print.forth  fInf.forth
2COURSE/2SEM/Csa/lab3/info/: help.md  lab3-task.md  marks.md  todo.md
2COURSE/2SEM/Csa/lab3/progs/: cat.forth  cat.ft  greet.ft  greet_code  hello_user_name.forth
2COURSE/2SEM/Csa/lab3/progs/basic_cycle/: cycle promt  cycle.forth
2COURSE/2SEM/Csa/lab3/progs/basic_if/: if.forth
2COURSE/2SEM/Csa/lab3/progs/basic_mod/: mod.forth
2COURSE/2SEM/Csa/lab3/progs/basic_progs/: add.forth  add.json  add2.forth  add2.json  basic_cycle.forth  basic_print.forth  cycle.forth  fInf.forth  if.forth  mod.forth  mod2.forth  mod2.json  nested_loop.forth
2COURSE/2SEM/Csa/lab3/progs/cat/: cat.forth  cat.json
2COURSE/2SEM/Csa/lab3/progs/greet/: greet.forth  hello_user_name.forth
2COURSE/2SEM/Csa/lab3/progs/hello_world/: hello.json  (+2 more)
2COURSE/2SEM/Csa/lab3/source/: ALU.py  Latch.py  MUX.py  alu.py  cat.forth  cat.json  comp1  comp2  instruction_decoder.py  isa.py  logger.py  machine.py  test.forth  test.json  test.py  translator.py  trash  util.py
2COURSE/2SEM/Csa/lab3/tests/: test_golden.py
2COURSE/2SEM/Csa/lab3/wait/: hello_user_name.yml  prob1.yml
(+658 files in other folders)
